# ChangeLog for dev-ruby/innertube
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*innertube-1.1.0 (24 Oct 2013)

  24 Oct 2013; Hans de Graaff <graaff@gentoo.org> +innertube-1.1.0.ebuild:
  Version bump.

*innertube-1.0.2 (24 Jul 2013)

  24 Jul 2013; Hans de Graaff <graaff@gentoo.org> +innertube-1.0.2.ebuild,
  +metadata.xml:
  Initial import. New dependency for thinking-sphinx.
