@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/innertube
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  02 Jul 2014; Hans de Graaff <graaff@gentoo.org> -innertube-1.0.2.ebuild:
+  Cleanup.
 
 *innertube-1.1.0 (24 Oct 2013)
 
